--- a/apps/main/templates/main/index.html
+++ b/apps/main/templates/main/index.html
@@ -29,6 +29,8 @@
       <input type="text" name="last_name" value="">
       <label>email</label>
       <input type="email" name="email" value="">
+      <label>alias</label>
+      <input type="text" name="alias" value="">
       <label>password</label>
       <input type="password" name="password" value="">
       <label>confirm password</label>
